Bug 233339 - Context menu entry "Configure Shortcuts" not translated after session restart
Summary: Context menu entry "Configure Shortcuts" not translated after session restart
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-lancelot (show other bugs)
Version: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-05 13:25 UTC by Frank Schaefer
Modified: 2010-04-16 11:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Schaefer 2010-04-05 13:25:02 UTC
Version:            (using KDE 4.4.2)
OS:                Linux
Installed from:    openSUSE RPMs

The context menu entry "Configure Shortcuts" is only translated during the session in which Lancelot was added to the task bar.
After KDE/session restart (and all following sessions), it appears untranslated.
All other menu entries are always translated.
Comment 1 Ivan Čukić 2010-04-16 11:56:28 UTC
SVN commit 1115393 by ivan:

BUG: 233339

Translation problem of a menu entry



 M  +17 -13    LancelotApplet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1115393