BUG: 233339

Translation problem of a menu entry


svn path=/trunk/KDE/kdeplasma-addons/; revision=1115393